# PointTexture

./: .gitignore  README.md
CDT/visualizer/: CMakeLists.txt  data_maker.cpp  main.cpp
python/: TextureGen.py  add_bottom.py  instance_segmentation.py  remesh.py  segment.py
python/buildings_with_bottom/: cdt_full_mesh.off  cdt_hollow_mesh.off  simple_building_demo.bvg  simple_building_demo.ply  simple_building_demo.txt
python/buildings_without_bottom/: simple_building_demo.txt
python/charts/: simple_building_demo_charts00.tga
webviewer/: objviewer.html
xatlas/: CMakeLists.txt
xatlas/source/examples/: example.cpp
xatlas/source/xatlas/: xatlas.h
